Resolves: tdf#102347 configure size/expose might never come...

if you request a size you might not get it.

This attempt dating through...

commit 6dc1d2706f519d91617ac1a12fc2051d97ef98c0
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Mon Jun 15 10:56:33 2015 +0100

    another stab at tdf#91393

    block paints only if the new requested size is larger than the original and
    unblock on explicit expose events as well as configure ones

...

commit 8f324aebfb94c4b2023894121b954ad4f35eb395
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Sun Jun 14 15:49:56 2015 +0100

    Resolves: tdf#91393 autotext (etc) not fully drawn

...

commit e6a1956034c98204e30b0ca40330249d6f6f8155
Author: Jan Holesovsky <kendy@collabora.com>
Date:   Fri Jun 12 15:36:03 2015 +0200

    tdf#91301: Don't cache incomplete tabs.

    After introduction of the Idle processing, something has changed so
    that the underlying GetGdkWindow() does not update its size fast enough;
    even though the gtk_window_resize() is called before the Window::Erase()
    (that actually paints the background) etc.

is all junk. I don't see the original problem of tdf#91393 or tdf#91301 anymore
under gtk2 after reverting this yet anyway to see if they need another fix.

Change-Id: Ide071eba279de726a9c6a80884bc9021c8914d9d